bug: aboutSection background z-index issues, unwanted overlaying

--- a/client/src/pages/Home/components/AboutSection/AboutSection.module.scss
+++ b/client/src/pages/Home/components/AboutSection/AboutSection.module.scss
@@ -1,148 +1,130 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 .container {
-	overflow: hidden;
-	min-height: 700px;
-	// height: 100vh;
-	//   background-color: #a2d5d6;
-	background: linear-gradient(
-		39deg,
-		rgba(99, 205, 208, 1) 7%,
-		rgba(162, 213, 214, 1) 35%
-	);
+  overflow: hidden;
+  min-height: 700px;
+  background: linear-gradient(39deg, rgba(99, 205, 208, 1) 7%, rgba(162, 213, 214, 1) 35%);
 }
 .aboutSection {
-	display: flex;
-	//   padding: 40px 0;
-	margin-left: 10%;
-	margin-right: 10%;
-	padding: 40px 0 6% 0;
-
-	//   justify-content: center;
+  display: flex;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 40px 0 6% 0;
 }
 .aboutHeader {
-	//   text-decoration: underline;
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 
-	white-space: nowrap;
+  white-space: nowrap;
 
-	padding: 4% 6%;
-	padding-bottom: 2%;
-	//   padding-top: 6%;
-	font-size: 4em;
-	font-weight: bold;
-	font-family: "Nunito Sans", sans-serif;
-	color: black;
-	transform: translateY(-50%);
-	opacity: 0;
+  padding: 4% 6%;
+  padding-bottom: 2%;
+  //   padding-top: 6%;
+  font-size: 4em;
+  font-weight: bold;
+  font-family: 'Nunito Sans', sans-serif;
+  color: black;
+  transform: translateY(-50%);
+  opacity: 0;
 }
 .runAboutHeaderEffect {
-	opacity: 1;
-	transform: translateY(0);
-	transition: all 0.5s ease-out;
-	// letter-spacing: 10px;
-	// transition: letter-spacing 1s ease-in;
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.5s ease-out;
 }
 .leftContent {
-	flex: 1 0 50%;
-	display: flex;
-	margin-right: 2%;
-	align-items: center;
-	padding-right: 10%;
-	//   padding-left: 10%;
+  flex: 1 0 50%;
+  display: flex;
+  margin-right: 2%;
+  align-items: center;
+  padding-right: 10%;
 }
 .rightContent {
-	flex: 1 0 50%;
-	//   margin-top: 60px;
-	max-width: 500px;
-	display: flex;
-	justify-content: center;
-
-	//   margin-left: 20px;
+  flex: 1 0 50%;
+  max-width: 500px;
+  display: flex;
+  justify-content: center;
 }
 .presenterImg {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	max-width: 600px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  max-width: 600px;
 }
 .aboutText {
-	color: black;
-	font-family: "Poppins", sans-serif;
-	font-size: 1.5em;
-	margin-left: 5%;
-
-	background-color: #63cdd0;
-	border-radius: 30px;
-	padding: 10px 5px 10px 20px;
-	span {
-		white-space: nowrap;
-
-		// border: 2px solid red;
-		background-color: #bbf2f2;
-		border-radius: 20px;
-		padding: 2px 7px;
-		&:hover {
-			background-color: #0fbaba;
-			transition: background-color 0.1s;
-		}
-		a {
-			color: black;
-			&:active {
-				color: black;
-			}
-			&:hover {
-				// background-color: #0fbaba;
-				color: white;
-				transition: color 0.3s ease-out;
-			}
-			&:visited {
-				color: black;
-			}
-		}
-	}
-	position: relative;
-	transform-style: preserve-3d;
-
-	&::after {
-		position: absolute;
-		content: "";
-		background-color: #182c36;
-		width: 100%;
-		height: 100%;
-		left: -3%;
-		top: 3%;
-		border-radius: 30px;
-		transform: translateZ(-10px);
-	}
+  color: black;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.5em;
+  margin-left: 5%;
+  background-color: #63cdd0;
+  border-radius: 30px;
+  padding: 10px 5px 10px 20px;
+  z-index: 1;
+  span {
+    white-space: nowrap;
+    background-color: #bbf2f2;
+    border-radius: 20px;
+    padding: 2px 7px;
+    &:hover {
+      background-color: #0fbaba;
+      transition: background-color 0.1s;
+    }
+    a {
+      color: black;
+      &:active {
+        color: black;
+      }
+      &:hover {
+        color: white;
+        transition: color 0.3s ease-out;
+      }
+      &:visited {
+        color: black;
+      }
+    }
+  }
+    position: relative;
+    transform-style: preserve-3d;
 }
+.aboutTextAfter {
+  z-index: -1;
+  position: absolute;
+  content: '';
+  background-color: #182c36;
+  width: 100%;
+  height: 100%;
+  left: -3%;
+  top: 3%;
+  border-radius: 30px;
+    transform: translateZ(-10px);
+}
+
 @media (max-width: 1600px) {
-	.rightContent {
-		max-width: 400px;
-	}
+  .rightContent {
+    max-width: 400px;
+  }
 }
 
 @media (max-width: 1340px) {
-	.rightContent {
-		max-width: 350px;
-	}
+  .rightContent {
+    max-width: 350px;
+  }
 }
 @media (max-width: 937px) {
-	.rightContent {
-		display: none;
-	}
-	.leftContent {
-		padding-right: 0;
-	}
-	.aboutSection {
-		padding: 9% 0 6% 0;
-	}
+  .rightContent {
+    display: none;
+  }
+  .leftContent {
+    padding-right: 0;
+  }
+  .aboutSection {
+    padding: 9% 0 6% 0;
+  }
 }
 @media (max-width: 485px) {
-	.aboutSection {
-		padding: 9% 0 15% 0;
-	}
+  .aboutSection {
+    padding: 9% 0 15% 0;
+  }
 }
